--- a/public/parts/news.ejs
+++ b/public/parts/news.ejs
@@ -1,4 +1,4 @@
-<div class="tile is-parent is-vertical has-background-grey-lighter">
+<!--<div class="tile is-parent is-vertical has-background-grey-lighter">
 	<div class="tile is-child news">
 	<h1 class="title">Aktualności</h1>
 		<div class="news-container tile-content">
@@ -19,4 +19,4 @@
 			<%}%>
 		</div>
 	</div>
-</div>
+</div> -->
