--- a/public/stylesheets/card.sass
+++ b/public/stylesheets/card.sass
@@ -46,7 +46,18 @@
 
 	&:hover
 		div.arrow
-			color: $black	
+			color: $black
+
+	h1 
+		color: $black
+		font-size: $size-4
+		font-weight: 900
+		word-wrap: break-word
+
+	h2
+		color: $grey
+		font-size: $size-5
+
 
 
 @include mobile
