small changes on layout

--- a/public/parts/index/about.ejs
+++ b/public/parts/index/about.ejs
@@ -5,7 +5,7 @@
 			<div class="tile is-child tile-content">
 				<div class="has-border-left has-border-top article">
 					<h1 class="title">Krótko o powtranie</h1>
-					<p><span class="important">POWTRAN Technology Co. Ltd.</span>, od z górą 30 lat, jest obecnym na rynkach światowych, renomowanym producentem urządzeń napędowych takich jak przetwornice częstotliwości, urządzenia łagodnego rozruchu SoftStart, serwomotory, napędy do silników z magnesami trwałym, dławiki sieciowe i silnikowe, filtry przeciwzakłóceniowe i wiele innych. Wyroby firmy <span class="important">POWTRAN</span> są obecne w ponad 100 krajach na świecie, w tym od ponad 10 lat w Polsce.</p>
+					<p><span class="important">POWTRAN Technology Co. Ltd.</span>, od ponad 30 lat, jest obecnym na rynkach światowych, renomowanym producentem urządzeń napędowych takich jak przetwornice częstotliwości, urządzenia łagodnego rozruchu SoftStart, serwomotory, napędy do silników z magnesami trwałym, dławiki sieciowe i silnikowe, filtry przeciwzakłóceniowe i wiele innych. Wyroby firmy <span class="important">POWTRAN</span> są obecne w ponad 100 krajach na świecie, w tym od ponad 10 lat w Polsce.</p>
 					<p>Jako <span class="important">POWTRAN-Polska Sp. z o.o.</span> jesteśmy obecni na polskim rynku, jako jedyny i wyłączny przedstawiciel POWTRAN Technology Co., Ltd w Polsce, praktycznie od samego początku obecności wyrobów firmy <span class="important">POWTRAN</span> w Polsce.</p>
 				</div>
 			</div>
@@ -15,34 +15,6 @@
 				<figure class="tile-content image">
 					<img src="images/inverters1.png" />
 				</figure>
-			</div>
-		</div>
-	</div>
-	<div class="tile is-parent is-vertical">
-		<div class="tile is-child tile-content">
-			<div class=" has-border-right has-border-top article">
-				<p>
-					Systematycznie rozwijana i unowocześniana oferta oraz rozwijająca się sieć dystrybucyjna, pozwalają oferować <span class="important">wysokiej jakości urządzenia</span>, charakteryzujące się wysokim zaawansowaniem technicznym oraz <span class="important">niezawodnym działaniem w długim okresie eksploatacji</span>. 
-				Tysiące sprzedanych falowników i innych urządzeń oraz zadowolenie setek klientów potwierdzają wysoką jakość oferowanych urządzeń i pozwalają umacniać pozycję marki <span class="important">POWTRAN</span> na polskim rynku.
-				</p>
-			</div>
-		</div>
-		<div class="tile is-child tile-content">
-			<div class="has-border-left has-border-bottom article content">
-				<span class="important">Dostarczamy</span>:
-				<ul>
-					<li>falowniki jednofazowe i trójfazowe w zakresie mocy 500 W do 630 kW</li>
-					<li>układy łagodnego rozruchu - SoftStart</li>
-					<li>dławiki sieciowe i silnikowe, filtry EMI, rezystory hamowania i inne akcesoria</li>
-					<li>inną aparaturę elektryczną i urządzenia AKPiA</li>
-				</ul>
-				<span class="important">Oferujemy</span>:
-				<ul>
-					<li>dostawę urządzeń</li>
-					<li>doradztwo w zakresie doboru, aplikowania i obsługi urządzeń</li>
-					<li>systemy automatyzacji maszyn i procesów przemysłowych i technologicznych</li>
-					<li>w ramach usług wykonujemy projekt, realizację, rozruch i serwis oferowanych systemów</li>
-				</ul>	
 			</div>
 		</div>
 	</div>
