--- a/public/parts/mainMenuSlider.ejs
+++ b/public/parts/mainMenuSlider.ejs
@@ -3,9 +3,9 @@
 		<img class="fullwidth" src="<%=render.mainBanner%>">
 	</figure>
 	
-	<div class="buttons">
+	<!--<div class="buttons">
 		<button class="arrow prev"><</button>
 		<button class="arrow next">></button>
-	</div>
+	</div>-->
 
 </div>
