--- a/public/parts/topLabel.ejs
+++ b/public/parts/topLabel.ejs
@@ -1,7 +1,7 @@
 <div class="wrapper topLabel">
 	<div class="container">
 
-		Skontaktuj się +48 501 266866
+		Skontaktuj się +48 501 263 866
 
 	</div>
 </div>
