--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 
-		<div class="tile is-ancestor is-vertical">
+		<div class="tile is-ancestor is-vertical" style="margin-top: 25px">
 			<footer class="tile is-parent">
 				<div class="tile is-child">
 					<% include ../public/parts/footer %>
