--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,31 +19,15 @@
 				</div>
 			</header>
 		</div><!--ancestor-->
-		
-		<div class="has-background-white page">
-			<div class="container">
-				<main class="is-ancestor tile is-vertical">
-					<div class="tile">
-						<div class="tile is-8">
-							<% include ../public/parts/index/about %>
-						</div>
-						<div class="tile is-4 is-parent">
-							<div class="tile is-child">
-								<% include ../public/parts/news %>
-							</div>
-						</div>
-					</div>
-				</main>
-			</div>
-		</div>
 	
-		<div class="has-background-grey-lighter page">
+		<!--<div class="has-background-grey-lighter page">
 			<div class="container">
 				<main class="is-ancestor tile is-vertical">
 					<% include ../public/parts/index/productSlider %>
 				</main>
 			</div>
 		</div>
+		-->
 	
 
 		<div class="has-background-white page">
@@ -58,6 +42,23 @@
 			<div class="container">
 				<main class="is-ancestor tile is-vertical">
 					<% include ../public/parts/index/mailer %>
+				</main>
+			</div>
+		</div>
+		
+		<div class="has-background-white page">
+			<div class="container">
+				<main class="is-ancestor tile is-vertical">
+					<div class="tile">
+						<div class="tile is-8">
+							<% include ../public/parts/index/about %>
+						</div>
+						<div class="tile is-4 is-parent">
+							<div class="tile is-child">
+								<% include ../public/parts/news %>
+							</div>
+						</div>
+					</div>
 				</main>
 			</div>
 		</div>
