--- a/views/product.ejs
+++ b/views/product.ejs
@@ -99,7 +99,7 @@
 
 				</div>
 				<div class="tile is-4">
-					<% include ../public/parts/news %>
+					<% include ../public/parts/sideMessager %>
 				</div>
 			</div>
 		</div>
