--- a/public/parts/index/whyus.ejs
+++ b/public/parts/index/whyus.ejs
@@ -20,10 +20,29 @@
 		<div class="tile is-parent moved-50p-left-mobile">
 			<div class="tile is-child">
 				<div class="tile-content moved-50p-left-mobile-content">
-					<p>
-					Systematycznie rozwijana i unowocześniana oferta oraz rozwijająca się sieć dystrybucyjna, pozwalają oferować wysokiej jakości urządzenia, charakteryzujące się wysokim zaawansowaniem technicznym oraz niezawodnym działaniem w długim okresie eksploatacji. 
-			Tysiące sprzedanych falowników i innych urządzeń oraz zadowolenie setek klientów potwierdzają wysoką jakość oferowanych urządzeń i pozwalają umacniać pozycję marki POWTRAN na polskim rynku.
-					</p>
+					<div class=" has-border-right has-border-top article">
+						<p>
+							Systematycznie rozwijana i unowocześniana oferta oraz rozwijająca się sieć dystrybucyjna, pozwalają oferować <span class="important">wysokiej jakości urządzenia</span>, charakteryzujące się wysokim zaawansowaniem technicznym oraz <span class="important">niezawodnym działaniem w długim okresie eksploatacji</span>. 
+						Tysiące sprzedanych falowników i innych urządzeń oraz zadowolenie setek klientów potwierdzają wysoką jakość oferowanych urządzeń i pozwalają umacniać pozycję marki <span class="important">POWTRAN</span> na polskim rynku.
+						</p>
+					</div>
+					<br>
+					<div class="has-border-left has-border-bottom article content">
+						<span class="important">Dostarczamy</span>:
+						<ul>
+							<li>falowniki jednofazowe i trójfazowe w zakresie mocy 500 W do 630 kW</li>
+							<li>układy łagodnego rozruchu - SoftStart</li>
+							<li>dławiki sieciowe i silnikowe, filtry EMI, rezystory hamowania i inne akcesoria</li>
+							<li>inną aparaturę elektryczną i urządzenia AKPiA</li>
+						</ul>
+						<span class="important">Oferujemy</span>:
+						<ul>
+							<li>dostawę urządzeń</li>
+							<li>doradztwo w zakresie doboru, aplikowania i obsługi urządzeń</li>
+							<li>systemy automatyzacji maszyn i procesów przemysłowych i technologicznych</li>
+							<li>w ramach usług wykonujemy projekt, realizację, rozruch i serwis oferowanych systemów</li>
+						</ul>	
+					</div>
 				</div>
 			</div>
 		</div>
