--- a/public/parts/sideMessager.ejs
+++ b/public/parts/sideMessager.ejs
@@ -1,4 +1,4 @@
-<div class="tile is-parent is-vertical has-background-grey-lighter">
+<div class="tile is-parent is-vertical ">
 	<div class="tile is-child smallMessage">
 		<h1 class="title">Skontaktuj się z nami!</h1>
 		<a href="/contact" class="button is-danger is-outlined" style="width: 100%">Kontakt</a>
@@ -6,7 +6,9 @@
 		<br>
 		<br>
 
-		<%include messanger%>
+		<div class="box has-background-grey-lighter">
+			<%include messanger%>
+		</div>
 
 	</div>
 </div>
