--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -40,7 +40,7 @@
 							<span class="important-red">Sprzedaż i doradztwo techniczne - Jerzy Parczyk</span>
 							<ul>
 								<li>tel. <span class="important">+48 501 263 866</span></li>
-								<li>j.parczyk@powtran-polska.pl</li>
+								<li>jparczyk@wp.pl</li>
 							</ul>
 							<br>
 
