--- a/public/parts/index/mailer.ejs
+++ b/public/parts/index/mailer.ejs
@@ -19,58 +19,7 @@
 		<div class="tile is-parent moved-50p-left-mobile" >
 			<div class="tile is-child">
 				<div class="tile-content moved-50p-left-mobile-content">
-					<form>
-						<div class="field">
-							<label class="label">Imię</label>
-							<div class="control has-icons-right">
-								<input class="input" type="text" placeholder="Wprowadź swoje imię...">
-								<span class="icon is-small is-right">
-									<i class="fas fa-check"></i>
-								</span>
-							</div>
-						</div>
-						<div class="field">
-							<label class="label">Nazwisko</label>
-							<div class="control has-icons-right">
-								<input class="input" type="text" placeholder="Wprowadź swoje nazwisko...">
-								<span class="icon is-small is-right">
-									<i class="fas fa-check"></i>
-								</span>
-							</div>
-						</div>
-						<div class="field">
-							<label class="label">Email kontatowy</label>
-							<div class="control has-icons-right">
-								<input class="input" type="text" placeholder="Wprowadź swój e-mail kontaktowy...">
-								<span class="icon is-small is-right">
-									<i class="fas fa-check"></i>
-								</span>
-							</div>
-						</div>
-						<div class="field">
-							<label class="label">Temat</label>
-							<div class="control has-icons-right">
-								<input class="input" type="text" placeholder="Wprowadź temat wiadomości...">
-								<span class="icon is-small is-right">
-									<i class="fas fa-check"></i>
-								</span>
-							</div>
-						</div>
-						<div class="field">
-							<label class="label">Wiadomość</label>
-							<div class="control">
-								<textarea class="textarea" placeholder="Treść wiadomości..."></textarea>
-							</div>
-						</div>
-						<div class="field is-grouped">
-							<div class="control">
-								<button class="button is-primary">Wyślij</button>
-							</div>
-							<div class="control">
-								<button class="button is-text">Anuluj</button>
-							</div>
-						</div>
-					</form>
+					<%include ../messanger%>
 				</div>
 			</div>
 		</div>
